k8s/4-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-build-server
spec:
  ports:
  - port: 3000
    targetPort: 3000
    name: http
  selector:
    app: ai-build-server
